--- a/src/main/resources/exception.properties
+++ b/src/main/resources/exception.properties
@@ -1,13 +1,16 @@
-ACCOUNT_LOGIN_DTO_01=\u767B\u5F55\u8D26\u53F7\u4E3A\u7A7A
-ACCOUNT_LOGIN_DTO_02=\u767B\u5F55\u8D26\u53F7\u957F\u5EA6\u8FC7\u957F
-ACCOUNT_LOGIN_DTO_03=\u767B\u5F55\u5BC6\u7801\u4E3A\u7A7A
-ACCOUNT_LOGIN_DTO_04=\u5F3A\u5236\u767B\u5F55\u72B6\u6001\u4E3A\u7A7A
-ACCOUNT_LOGIN_DTO_05=\u6839\u636E id \u5220\u9664\u8D26\u53F7\u65F6\uFF0Cid \u4E3A\u7A7A
-ACCOUNT_LOGIN_DTO_06=\u6839\u636E\u8D26\u53F7\u67E5\u8BE2\u65F6\uFF0C\u8D26\u53F7\u4E3A\u7A7A
-ACCOUNT_LOGIN_01=\u8D26\u53F7\u4E0D\u5B58\u5728\uFF0C\u8BF7\u8DDF\u7BA1\u7406\u5458\u786E\u8BA4
-ACCOUNT_LOGIN_02=\u5BC6\u7801\u9519\u8BEF\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\u91CD\u7F6E\u5BC6\u7801
-ACCOUNT_LOGIN_03=\u8BE5\u8D26\u53F7\u5DF2\u767B\u5F55
-ACCOUNT_LOGIN_04=\u8BE5\u8D26\u53F7\u5DF2\u5B58\u5728
-ACCOUNT_CREATE_01=\u65B0\u589E\u8D26\u53F7\u4E0D\u80FD\u4E3A\u7A7A
-ACCOUNT_CREATE_02=\u65B0\u589E\u8D26\u53F7\u957F\u5EA6\u4E0D\u7B26\u5408\u89C4\u5B9A
-ACCOUNT_CREATE_03=\u65B0\u589E\u8D26\u53F7\u7C7B\u578B\u4E3A\u7A7A
+ACCOUNT_LOGIN_DTO_01=登录账号为空
+ACCOUNT_LOGIN_DTO_02=登录账号长度过长
+ACCOUNT_LOGIN_DTO_03=登录密码为空
+ACCOUNT_LOGIN_DTO_04=强制登录状态为空
+ACCOUNT_LOGIN_DTO_05=根据 id 删除账号时，id 为空
+ACCOUNT_LOGIN_DTO_06=根据账号查询时，账号为空
+ACCOUNT_LOGIN_01=账号不存在，请跟管理员确认
+ACCOUNT_LOGIN_02=密码错误，请联系管理员重置密码
+ACCOUNT_LOGIN_03=该账号已登录
+ACCOUNT_LOGIN_04=该账号已存在
+ACCOUNT_CREATE_01=新增账号不能为空
+ACCOUNT_CREATE_02=新增账号长度不符合规定
+ACCOUNT_CREATE_03=新增账号类型为空
+
+PAGE_PARAM_01=排序为空
+PAGE_PARAM_02=排序的需要的字段为空
